Fix UI typing, payslip display and update backend permissions