@@ -9,8 +9,8 @@ import com.accounting.app.model.*;
 import com.accounting.app.repository.*;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 @Component
@@ -71,34 +71,45 @@ public class DataSeeder implements CommandLineRunner {
         seedUser("ketoan_luong", "ktluong@company.com", "123456", ERole.ROLE_KE_TOAN_LUONG);
         seedUser("ketoan_truong", "kttruong@company.com", "123456", ERole.ROLE_KE_TOAN_TRUONG);
 
-        // Xóa tài khoản 'ketoan_tt' nếu nó từng tồn tại để tránh xung đột với Enum bị xóa
-        userRepository.findByUsername("ketoan_tt").ifPresent(user -> {
-            userRepository.delete(user);
-            System.out.println("Cleaned up user: ketoan_tt");
-        });
-
         // Seed ma trận phân quyền mặc định
-        if (permRepo.count() == 0) {
-            // ROLE_NHAN_SU: Nhân sự, Chấm công, Nghỉ phép, Biến động lương
-            seedPerm("ROLE_NHAN_SU", "HR_EMPLOYEE"); seedPerm("ROLE_NHAN_SU", "HR_ATTENDANCE"); seedPerm("ROLE_NHAN_SU", "HR_LEAVE");
-            seedPerm("ROLE_NHAN_SU", "HR_SALARY_CHANGE");
-            // ROLE_KE_TOAN_LUONG: Cấu hình, Chấm công, Tính lương, Sổ kế toán, Biến động lương
-            seedPerm("ROLE_KE_TOAN_LUONG", "CONFIG_ACCOUNT"); seedPerm("ROLE_KE_TOAN_LUONG", "CONFIG_INSURANCE");
-            seedPerm("ROLE_KE_TOAN_LUONG", "HR_EMPLOYEE"); seedPerm("ROLE_KE_TOAN_LUONG", "HR_ATTENDANCE");
-            seedPerm("ROLE_KE_TOAN_LUONG", "PAYROLL_CALCULATE"); seedPerm("ROLE_KE_TOAN_LUONG", "ACCOUNTING_VIEW");
-            seedPerm("ROLE_KE_TOAN_LUONG", "HR_SALARY_CHANGE");
-            seedPerm("ROLE_KE_TOAN_TRUONG", "CONFIG_ACCOUNT"); 
-            seedPerm("ROLE_KE_TOAN_TRUONG", "PAYROLL_APPROVE"); 
-            seedPerm("ROLE_KE_TOAN_TRUONG", "ACCOUNTING_VIEW");
-            seedPerm("ROLE_KE_TOAN_TRUONG", "HR_SALARY_CHANGE_APPROVE"); 
-            seedPerm("ROLE_KE_TOAN_TRUONG", "HR_SALARY_CHANGE");
-            System.out.println("Seeded Default Permission Matrix");
-        }
+        permRepo.deleteByRoleName("ROLE_KE_TOAN_LUONG");
+        permRepo.deleteByRoleName("ROLE_KE_TOAN_TRUONG");
+        permRepo.deleteByRoleName("ROLE_NHAN_SU");
+
+        seedPerm("ROLE_NHAN_SU", "HR_EMPLOYEE"); seedPerm("ROLE_NHAN_SU", "HR_ATTENDANCE"); seedPerm("ROLE_NHAN_SU", "HR_LEAVE");
+        seedPerm("ROLE_NHAN_SU", "HR_SALARY_CHANGE");
+        seedPerm("ROLE_NHAN_SU", "HR_SALARY_CHANGE_APPROVE");
+        seedPerm("ROLE_NHAN_SU", "DASHBOARD_VIEW");
+
+        seedPerm("ROLE_KE_TOAN_LUONG", "CONFIG_ACCOUNT"); seedPerm("ROLE_KE_TOAN_LUONG", "CONFIG_INSURANCE");
+        seedPerm("ROLE_KE_TOAN_LUONG", "PAYROLL_CALCULATE"); seedPerm("ROLE_KE_TOAN_LUONG", "ACCOUNTING_VIEW");
+
+        seedPerm("ROLE_KE_TOAN_TRUONG", "CONFIG_ACCOUNT"); 
+        seedPerm("ROLE_KE_TOAN_TRUONG", "CONFIG_INSURANCE"); 
+        seedPerm("ROLE_KE_TOAN_TRUONG", "PAYROLL_CALCULATE"); 
+        seedPerm("ROLE_KE_TOAN_TRUONG", "PAYROLL_APPROVE"); 
+        seedPerm("ROLE_KE_TOAN_TRUONG", "ACCOUNTING_VIEW");
+        seedPerm("ROLE_KE_TOAN_TRUONG", "HR_SALARY_CHANGE_APPROVE"); 
+
+        // Update status for existing null records
+        salaryRepo.findAll().stream().filter(x -> x.getStatus() == null).forEach(x -> { x.setStatus("APPROVED"); salaryRepo.save(x); });
+        insuranceRepo.findAll().stream().filter(x -> x.getStatus() == null).forEach(x -> { x.setStatus("APPROVED"); insuranceRepo.save(x); });
+        taxRepo.findAll().stream().filter(x -> x.getStatus() == null).forEach(x -> { x.setStatus("APPROVED"); taxRepo.save(x); });
+        deductionRepo.findAll().stream().filter(x -> x.getStatus() == null).forEach(x -> { x.setStatus("APPROVED"); deductionRepo.save(x); });
+
         // Seed UC 02: Insurance Rates
         if (insuranceRepo.count() == 0) {
-            insuranceRepo.save(new InsuranceRate(null, "XH", 8.0, 17.5, LocalDate.now()));
-            insuranceRepo.save(new InsuranceRate(null, "YT", 1.5, 3.0, LocalDate.now()));
-            insuranceRepo.save(new InsuranceRate(null, "TN", 1.0, 1.0, LocalDate.now()));
+            InsuranceRate xh = new InsuranceRate();
+            xh.setType("XH"); xh.setEmployeeRate(8.0); xh.setEmployerRate(17.5); xh.setEffectiveDate(LocalDate.now()); xh.setStatus("APPROVED");
+            insuranceRepo.save(xh);
+
+            InsuranceRate yt = new InsuranceRate();
+            yt.setType("YT"); yt.setEmployeeRate(1.5); yt.setEmployerRate(3.0); yt.setEffectiveDate(LocalDate.now()); yt.setStatus("APPROVED");
+            insuranceRepo.save(yt);
+
+            InsuranceRate tn = new InsuranceRate();
+            tn.setType("TN"); tn.setEmployeeRate(1.0); tn.setEmployerRate(1.0); tn.setEffectiveDate(LocalDate.now()); tn.setStatus("APPROVED");
+            insuranceRepo.save(tn);
         }
 
         // Seed UC 03: Salary Params
@@ -108,12 +119,13 @@ public class DataSeeder implements CommandLineRunner {
             p.setStandardWorkDayMode("FIXED");
             p.setMinimumWage(1800000.0);
             p.setMealAllowance(25000.0);
+            p.setStatus("APPROVED");
             salaryRepo.save(p);
         }
 
-        // Seed UC 04/05: Tax Tiers — 7 bậc theo Luật Thuế TNCN Việt Nam
+        // Seed UC 04/05: Tax Tiers
         if (taxRepo.count() == 0) {
-            taxRepo.saveAll(Arrays.asList(
+            taxRepo.saveAll(List.of(
                 createTier(0.0, 5000000.0, 5.0, 1),
                 createTier(5000000.0, 10000000.0, 10.0, 2),
                 createTier(10000000.0, 18000000.0, 15.0, 3),
@@ -127,43 +139,32 @@ public class DataSeeder implements CommandLineRunner {
         // Seed UC 06: Deductions
         if (deductionRepo.count() == 0) {
             DeductionSetting d = new DeductionSetting();
-            d.setPersonalDeduction(15500000.0);
-            d.setDependentDeduction(6200000.0);
+            d.setPersonalDeduction(11000000.0);
+            d.setDependentDeduction(4400000.0);
+            d.setStatus("APPROVED");
             deductionRepo.save(d);
         }
 
-        // Seed Nhóm 2: Test Employees với thông tin chi tiết mới
-        try {
-            if (employeeRepo.count() == 0) {
-                Employee e1 = new Employee("NV001", "Nguyễn Văn Anh", 25000000.0, 1, EmployeeType.FULL_TIME);
-                e1.setDob(LocalDate.of(1990, 5, 20));
-                e1.setPhone("0912345678");
-                e1.setEmail("anh.nv@company.com");
-                e1.setHometown("Hà Nội");
-                e1.setPositionCoefficient(0.8); // Giám đốc
-                e1.setSeniorityAllowance(500000.0);
-                employeeRepo.save(e1);
+        // Seed Nhóm 2: Test Employees
+        if (employeeRepo.count() == 0) {
+            Employee e1 = new Employee("NV001", "Nguyễn Văn Anh", 25000000.0, 1, EmployeeType.FULL_TIME);
+            e1.setDob(LocalDate.of(1990, 5, 20));
+            e1.setPositionCoefficient(0.8);
+            e1.setSeniorityAllowance(500000.0);
+            e1.setActive(true);
+            employeeRepo.save(e1);
 
-                Employee e2 = new Employee("NV002", "Trần Thị Bình", 12000000.0, 0, EmployeeType.PROBATION);
-                e2.setDob(LocalDate.of(1995, 10, 15));
-                e2.setPhone("0987654321");
-                e2.setEmail("binh.tt@company.com");
-                e2.setHometown("Nam Định");
-                e2.setPositionCoefficient(0.4); // Trưởng phòng
-                e2.setSeniorityAllowance(0.0);
-                employeeRepo.save(e2);
+            Employee e2 = new Employee("NV002", "Trần Thị Bình", 12000000.0, 0, EmployeeType.PROBATION);
+            e2.setDob(LocalDate.of(1995, 10, 15));
+            e2.setPositionCoefficient(0.4);
+            e2.setSeniorityAllowance(0.0);
+            e2.setActive(true);
+            employeeRepo.save(e2);
 
-                Employee e3 = new Employee("NV003", "Lê Văn Cường", 5000000.0, 0, EmployeeType.INTERN);
-                e3.setDob(LocalDate.of(2002, 1, 1));
-                e3.setPhone("0905556667");
-                e3.setEmail("cuong.lv@company.com");
-                e3.setHometown("Hải Phòng");
-                employeeRepo.save(e3);
-                
-                System.out.println("Seeded 3 Detailed Test Employees with Allowances");
-            }
-        } catch (Exception e) {
-            System.err.println("Error seeding employees: " + e.getMessage());
+            Employee e3 = new Employee("NV003", "Lê Văn Cường", 5000000.0, 0, EmployeeType.INTERN);
+            e3.setDob(LocalDate.of(2002, 1, 1));
+            e3.setActive(true);
+            employeeRepo.save(e3);
         }
         System.out.println(">>> Data Seeding Process Finished Successfully <<<");
     }
@@ -171,6 +172,7 @@ public class DataSeeder implements CommandLineRunner {
     private TaxTier createTier(Double lower, Double upper, Double rate, Integer level) {
         TaxTier t = new TaxTier();
         t.setLowerBound(lower); t.setUpperBound(upper); t.setTaxRate(rate); t.setTierLevel(level);
+        t.setStatus("APPROVED");
         return t;
     }
 
